--- a/src/component/bgEffect/index.scss
+++ b/src/component/bgEffect/index.scss
@@ -8,4 +8,12 @@
   width: 100%;
   height: 100%;
   z-index: 2;
+
+  // 🔥 이 줄 추가
+  pointer-events: none;
+
+  // 혹시나 해서 캔버스에도 적용하고 싶다면
+  canvas {
+    pointer-events: none;
+  }
 }
